# MAI_SEM3_LAB6

./: .gitignore  README.md
lab6/: CMakeLists.txt  main.cpp
lab6/include/: battle_visitor.hpp  dungeon.hpp  elf.hpp  knight.hpp  npc.hpp  npc_factory.hpp  observer.hpp  observer_console.hpp  observer_file.hpp  point.hpp  rogue.hpp  visitor.hpp
lab6/src/: battle_visitor.cpp  dungeon.cpp  elf.cpp  knight.cpp  npc.cpp  npc_factory.cpp  observer_console.cpp  observer_file.cpp  point.cpp  rogue.cpp
lab6/tests/: tests01.cpp
